Changes on top of 0.5.3-1
==============================================================================
- 1914204 wbemsmt-webapp: input controls in message panels

Changes in 0.5.3-1
==============================================================================
- 1845499 wbemsmt-webapp: Include proper group definition for RPM
- 1836656 wbemsmt-webapp: Version replacement during build
- 1834438 wbemsmt-adminwebapp: hostnames are not saved
- 1819901 wbemsmt-webapp: show namespace in slp result
- 1819855 wbemsmt-webapp: no parallel admin sessions
- 1819758 wbemsmt-webapp: wrong xml :overwrite local conf with slp
- 1813970 wbemsmt-webapp: update the tree if requested from BL
- 1813968 wbemsmt-webapp: utils for managing open ports

Changes in 0.5.2-1
==============================================================================
- 1793932 wbemsmt-webapp: noborder stylesheet class for main.css
- 1784067 wbemsmt-webapp: rework admin panels

Changes in 0.5.1-1 :
==============================================================================
- 1780048  wbemsmt-webapp: add protocol to login settings
- 1775196  wbemsmt-webapp: confugurable namespace for embed login
- 1775191  wbemsmt-webapp: stop ajax requests before a page request
- 1774772  wbemsmt-webapp: remove application namespace
- 1773221  wbemsmt-webapp: add configurable properties to tasks
- 1768402  wbemsmt-webapp: remove dummy-config for not-configured task

Changes in 0.5.0-1 :
==============================================================================
- 1756335  wbemsmt-webapp: synchronize concurrent ajax requests
- 1754931  wbemsmt-webapp: Upgrade to build environment
- 1746923  wbemsmt-webapp: docu for slp config/usage
- 1746585  wbemsmt-admin: namespace for application
- 1740803  wbemsmt-slp: use treeconfig to check for slp hosts
- 1737773  wbemsmt-jsf: Save Data at login
- 1737049  wbemsmt-jsf: parallel logon for multiple hosts
- 1731237  wbemsmt-jsf: store updateInterval in Cookies