@@ -20,6 +20,7 @@
 
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
+<%@ taglib uri="http://sourceforge.net/projects/sblim/wbemsmt" prefix="w" %>
 <%@ taglib uri="http://myfaces.apache.org/tomahawk" prefix="t"%>
 <f:loadBundle basename="org.sblim.wbemsmt.webapp.jsf.webapp_messages" var="messages"/>
 <h:panelGrid id="editPanel" binding="#{objectActionController.currentEditor}"/>
