@@ -1,5 +1,6 @@
 Changes on top of 0.5.3-1
 ==============================================================================
+- 1925438 wbemsmt-webapp: async message display
 - 1914204 wbemsmt-webapp: input controls in message panels
 
 Changes in 0.5.3-1
